# ninja-github-playtime

./: README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: main.yaml  temp-workflow.yaml
meh/: foo.py
tests/: test_foo.py
